# OrgArq

./: README.md
assembler/: Makefile  defs.h  montador.c
simulator/: Genius.asm  charmap.mif  kb.asm  kb.mif  montador  sim  timer.asm  timer.mif  timer_kb.asm  timer_kb.mif
simulator/files_simulator/: CMakeLists.txt  Controller.cpp  Mneumonicos.h  Model.cpp  Model.h  ModelInterface.h  View.cpp
simulator/files_simulator/processor_template/: simple_simulator_template.c
